--- a/src/stylesheets/sass/layout/_Testimonials.scss
+++ b/src/stylesheets/sass/layout/_Testimonials.scss
@@ -13,6 +13,12 @@
     font-size: 1rem;
     line-height: 1.25rem;
     letter-spacing: .25rem;
+    // tablet
+    @media (min-width: 768px) {
+      font-size: 1.25rem;
+      line-height: 1.563rem;
+      letter-spacing: .313rem;
+    }
   }
 
   &__cards {
